<resources>
    <string name="app_name">Borrow it!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tab_overview">Overview</string>
    <string name="tab_receive">Receive</string>
    <string name="tab_return">Return</string>
    <string name="due_date">Due Date: </string>
    <string name="initial_overview_value_to_receive">$0.00</string>
    <string name="initial_overview_value_to_pay">$0.00</string>
    <string name="to_pay">To Return</string>
    <string name="to_receive">To Receive</string>
    <string name="item_placeholder_date">19–9–2019</string>
    <string name="item_placeholder_contact">John Smith</string>
    <string name="item_placeholder_value">$ 123.45</string>
    <string name="item_placeholder_object_description">*Object
        Description</string>
    <string name="action_sorting">Sort</string>
    <string name="not_saved_toast">Not saved</string>
    <string name="enable_notification">Enable Overdue Notification</string>
    <string name="enable_notification_summary">Notification when an item is overdue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="initial_overview_object_to_receive">0 items</string>
    <string name="add_object_fab">Add object</string>
    <string name="add_money_fab">Add money</string>
    <string name="is_overdue">OVERDUE!</string>
    <string name="mark_as_done">Mark as Done</string>
    <string name="fab_edit">Edit Details</string>
    <string name="archive_item">Archive item</string>
    <string name="object_description">Object Description</string>
    <string name="receive_from">Receive From</string>
    <string name="return_to">Return To</string>
    <string name="due_by">Due by</string>
</resources>
