<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/itemReceiveCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/cardCornerRadius"
        app:cardElevation="@dimen/cardElevation">

        <!--TODO Add a filling bar with start date and due date-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <RelativeLayout
                android:id="@+id/item_top_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:id="@+id/item_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/item_placeholder_value"
                    android:textColor="@color/colorSecondary"
                    android:textStyle="bold"
                    android:textSize="@dimen/item_text_size" />

                <TextView
                    android:id="@+id/item_object_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/item_placeholder_object_description"
                    android:textColor="@color/colorSecondary"
                    android:textStyle="bold"
                    android:textSize="@dimen/item_text_size"
                    android:visibility="invisible"
                    android:maxLength="30"/>

                <ImageView
                    android:id="@+id/item_status_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="false"
                    android:src="@drawable/ic_checked"
                    android:layout_alignParentEnd="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/item_bottom_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:id="@+id/item_contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/item_placeholder_contact"
                    android:maxLength="25"/>

                <TextView
                    android:id="@+id/item_is_overdue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/is_overdue"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/item_due_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/item_due_date"
                    android:layout_below="@id/item_is_overdue"
                    android:text="@string/due_date"/>

                <TextView
                    android:id="@+id/item_due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/item_is_overdue"
                    android:text="@string/item_placeholder_date" />
            </RelativeLayout>

        </LinearLayout>



    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>