<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="comviniciusgpedroso.github.borrowit.ReceiveDetailActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/detail_itemReceiveCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <!--TODO Add a filling bar with start date and due date-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <RelativeLayout
                    android:id="@+id/item_top_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/detail_item_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/item_placeholder_value"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/item_text_size"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/detail_item_status_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:adjustViewBounds="false"
                        android:src="@drawable/ic_checked" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:id="@+id/detail_item_contact_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/item_placeholder_contact" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/detail_item_due_date"
                        android:text="@string/due_date" />

                    <TextView
                        android:id="@+id/detail_item_due_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:text="@string/item_placeholder_date" />
                </RelativeLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>
