<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comviniciusgpedroso.github.borrowit.ItemDetailActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="comviniciusgpedroso.github.borrowit.NewItemActivity">

        <TextView
            android:id="@+id/value_object_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="Value" />

        <View
            android:id="@+id/value_line"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#bdbdbd"
            app:layout_constraintTop_toBottomOf="@id/value_object_detail_tv"/>

        <TextView
            android:id="@+id/amount_object_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            android:text="Description or amount"
            app:layout_constraintTop_toBottomOf="@id/value_line"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/contact_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="Receive From/Return To"
            app:layout_constraintTop_toBottomOf="@id/amount_object_tv"/>

        <View
            android:id="@+id/contact_line"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#bdbdbd"
            app:layout_constraintTop_toBottomOf="@id/contact_tv"/>

        <TextView
            android:id="@+id/contact_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="24sp"
            android:text="Contact Name"
            app:layout_constraintTop_toBottomOf="@id/contact_tv"/>

        <TextView
            android:id="@+id/dates_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="Borrow Date"
            app:layout_constraintTop_toBottomOf="@id/contact_description_tv"/>

        <View
            android:id="@+id/dates_line"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#bdbdbd"
            app:layout_constraintTop_toBottomOf="@id/dates_tv"/>
        <!--TODO Add arch progress bar, borrow and due dated in the extremities and status inside
         -->
        <LinearLayout
            android:id="@+id/borrow_date_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/dates_line"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/borrow_date_tv_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="1/1/2001" />

        </LinearLayout>

        <TextView
            android:id="@+id/status_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="Status"
            app:layout_constraintTop_toBottomOf="@id/borrow_date_layout"/>

        <View
            android:id="@+id/status_line"
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#bdbdbd"
            app:layout_constraintTop_toBottomOf="@id/status_tv"/>

        <ImageView
            android:id="@+id/status_img_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_before_due_date"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/status_line"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/status_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:textSize="24sp"
            android:text="Due by 01 Jan 2001"
            app:layout_constraintTop_toBottomOf="@+id/status_line"
            app:layout_constraintStart_toEndOf="@id/status_img_detail"/>

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutFabMarkAsDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/fab_done_height"
            android:layout_marginEnd="@dimen/fab_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvtMarkAsDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_as_done"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding" />

            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabMarkAsDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_white_24dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFabEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/fab_object_height"
            android:layout_marginEnd="@dimen/fab_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvtEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fab_edit"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding" />

            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_details_white_24dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFabArchive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/fab_money_height"
            android:layout_marginEnd="@dimen/fab_margin"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/cvtArchive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/archive_item"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_vertical_padding"
                    android:paddingTop="@dimen/cardview_vertical_padding" />

            </android.support.v7.widget.CardView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabArchive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_archive_white_24dp"
                />
        </LinearLayout>

    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_edit_white_24dp" />
</android.support.design.widget.CoordinatorLayout>
